# TPlayer

./: README.md
app/: build.gradle.kts
app/src/androidTest/java/indi/pplong/tplayer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/media/: const.h  decode_state.h  one_frame.h
app/src/main/cpp/media/decoder/: base_decoder.cpp  base_decoder.h  i_decoder.h
app/src/main/cpp/media/decoder/audio/: a_decoder.cpp  a_decoder.h
app/src/main/cpp/media/decoder/video/: v_decoder.cpp  v_decoder.h
app/src/main/cpp/media/player/: opengl_player.cpp  opengl_player.h  player.cpp  player.h
app/src/main/cpp/media/render/audio/: audio_render.h  open_sl_render.cpp  open_sl_render.h
app/src/main/cpp/media/render/video/: native_render.cpp  native_render.h  video_render.h
app/src/main/cpp/media/render/video/opengl/: opengl_pixel_receiver.h  opengl_render.cpp  opengl_render.h
app/src/main/cpp/opengl/drawer/: drawer.cpp  drawer.h  video_drawer.cpp  video_drawer.h
app/src/main/cpp/opengl/drawer/proxy/: drawer_proxy.cpp  drawer_proxy.h  drawer_proxy_impl.cpp  drawer_proxy_impl.h
app/src/main/cpp/opengl/egl/: egl_core.cpp  egl_core.h  egl_surface.cpp  egl_surface.h
app/src/main/cpp/test/: test.cpp  test.h
app/src/main/cpp/util/: logger.h  time.h
app/src/main/java/indi/pplong/tplayer/: MainActivity.kt
app/src/main/java/indi/pplong/tplayer/ffmpeg/: FFmpegActivity.kt
app/src/main/java/indi/pplong/tplayer/player/: TPlayer.kt
app/src/main/res/layout/: activity_ffmpeg.xml  activity_main.xml  tplayer.xml
app/src/main/res/values/: attrs_t_player.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: styles.xml  themes.xml
app/src/test/java/indi/pplong/tplayer/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
